--- a/src/App.css
+++ b/src/App.css
@@ -124,3 +124,29 @@
   font-size: 15px;
 }
 
+#chart_container {
+  border-radius: 10px;
+  padding: 20px;
+  border-style: solid;
+  border-width: 2px;
+  border-color: #3c3c3f;
+}
+
+.admin_container {
+  margin-left: 0px;
+  margin-right: 50px;
+  margin-top: 10px;
+}
+
+#vartical_nav {
+  margin-top: -10px;
+  background-color: #000000;
+  margin-bottom: -70px;
+}
+
+#vertical_nav_button {
+  border-radius: 0px;
+  margin-top: -13px;
+  margin-left: 5px;
+  border-radius: 10px;
+}
