updated form for update function of a currency rate data

--- a/src/App.css
+++ b/src/App.css
@@ -57,12 +57,12 @@
   text-align: center;
 }
 
-#singele_line {
+#single_line {
   background-color: #282c34;
   height: 10px;
 }
 
-#thin_singele_line {
+#thin_single_line {
   background-color: #282c34;
   height: 5px;
   margin-top: 10px;
