--- a/src/App.css
+++ b/src/App.css
@@ -191,3 +191,13 @@
   background-color: #040484;
 }
 
+#info_in_form {
+  font-size: 12px;
+  color: #0051ff;
+}
+
+#warning_in_form {
+  font-size: 12px;
+  color: #ff0000;
+}
+
